zerocopy-derive/tests/ui-stable/late_compile_pass.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeroes` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:27:10
   |
27 | #[derive(FromZeroes)]
   |          ^^^^^^^^^^ the trait `FromZeroes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromZeroes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `FromZeroes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:36:10
   |
36 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `FromBytes1: FromZeroes` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:36:10
   |
36 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeroes` is not implemented for `FromBytes1`
   |
   = help: the following other types implement trait `FromZeroes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `FromBytes`
  --> $WORKSPACE/src/lib.rs
   |
   | pub unsafe trait FromBytes: FromZeroes {
   |                             ^^^^^^^^^^ required by this bound in `FromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:45:10
   |
45 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `AsBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:55:10
   |
55 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             bool
             i8
             u8
             Unaligned1
             Unaligned2
             Unaligned3
             U16<O>
             U32<O>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:63:10
   |
63 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             bool
             i8
             u8
             Unaligned1
             Unaligned2
             Unaligned3
             U16<O>
             U32<O>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-stable/late_compile_pass.rs:70:10
   |
70 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             bool
             i8
             u8
             Unaligned1
             Unaligned2
             Unaligned3
             U16<O>
             U32<O>
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
